<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_jalur"
            android:icon="@drawable/ic_baseline_local_post_office_24"
            android:title="@string/jalur_pendaftaran" />
        <item
            android:id="@+id/nav_biaya"
            android:icon="@drawable/ic_baseline_payment_24"
            android:title="@string/biaya" />
        <item
            android:id="@+id/nav_jadwal"
            android:icon="@drawable/ic_baseline_event_note_24"
            android:title="@string/jadwal" />
        <item
            android:id="@+id/nav_prodi"
            android:icon="@drawable/ic_baseline_book_24"
            android:title="@string/program_studi" />
        <item
            android:id="@+id/nav_daftar"
            android:icon="@drawable/ic_baseline_post_add_24"
            android:title="@string/pendaftaran" />
    </group>
</menu>